--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Dark overlay for main bg */
+            background: rgba(0, 0, 0, 0.5);
         }
         .container {
             position: relative;
@@ -27,6 +27,21 @@
             padding: 20px;
             color: white;
             text-align: center;
+        }
+        nav {
+            background: rgba(46, 204, 113, 0.9); /* Green nav bar */
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            color: black;
         }
         h1 {
             font-family: 'Bungee', cursive;
@@ -47,7 +62,7 @@
             gap: 20px;
         }
         .hack-card {
-            background: rgba(255, 255, 255, 0.1); /* Semi-transparent base */
+            background: rgba(255, 255, 255, 0.1);
             background-size: cover;
             background-position: center;
             border: 3px solid #2ecc71;
@@ -66,7 +81,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4); /* Dark overlay for readability */
+            background: rgba(0, 0, 0, 0.4);
             z-index: 0;
         }
         .hack-card:hover {
@@ -74,7 +89,7 @@
         }
         .hack-content {
             position: relative;
-            z-index: 1; /* Text above overlay */
+            z-index: 1;
         }
         .hack-card strong {
             color: #2ecc71;
@@ -101,6 +116,16 @@
 <body>
     <div class="overlay"></div>
     <div class="container">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="kitchen.html">Kitchen</a>
+            <a href="home.html">Home</a>
+            <a href="tech.html">Tech</a>
+            <a href="beauty.html">Beauty</a>
+            <a href="clothes.html">Clothes</a>
+            <a href="car.html">Car</a>
+            <a href="bathroom.html">Bathroom</a>
+        </nav>
         <h1>Quick Life Hacks Hub</h1>
         <p class="tagline">Unexpected tricks you’ll wish you knew sooner!</p>
         <div class="hack-grid">
