--- a/clothes.html
+++ b/clothes.html
@@ -113,7 +113,7 @@
         </nav>
         <h1>Clothes Hacks</h1>
         <div class="hack-grid">
-            <div class="hack-card" style="background-image: url('ice-cubes.jpg');">
+            <div class="hack-card" style="background-image: url('ice.jpg');">
                 <div class="hack-content">
                     <strong>Ice Cubes in Dryer to De-Wrinkle:</strong>
                     <p>Toss 1–2 in with wrinkled clothes and run on high for 10 mins—wrinkles steam right out.</p>
