--- a/bathroom.html
+++ b/bathroom.html
@@ -8,7 +8,7 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background: url('bg-hacks.jpg') no-repeat center/cover;
-            height: 100vh;
+            min-height: 100vh; /* Fixed from height: 100vh */
             overflow-x: hidden;
         }
         .overlay {
@@ -95,6 +95,21 @@
             margin: 5px 0 0;
             font-size: 0.9em;
         }
+        footer {
+            position: relative;
+            z-index: 1;
+            padding: 10px;
+            color: white;
+            text-align: center;
+            font-size: 0.9em;
+        }
+        footer a {
+            color: #2ecc71;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: white;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
@@ -145,5 +160,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
