--- a/bathroom.html
+++ b/bathroom.html
@@ -8,7 +8,7 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background: url('bg-hacks.jpg') no-repeat center/cover;
-            min-height: 100vh; /* Already good */
+            min-height: 100vh; /* Already fixed from your last update */
             overflow-x: hidden;
         }
         .overlay {
@@ -95,8 +95,18 @@
             margin: 5px 0 0;
             font-size: 0.9em;
         }
+        .ad-placeholder {
+            background: #333;
+            color: white;
+            padding: 10px;
+            margin: 20px auto;
+            width: 300px;
+            border-radius: 5px;
+        }
         footer {
-            margin: 20px auto; /* Matches ad-placeholder spacing */
+            position: relative;
+            z-index: 1;
+            padding: 10px;
             color: white;
             text-align: center;
             font-size: 0.9em;
@@ -157,9 +167,10 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
-        </footer>
+        <div class="ad-placeholder">Ad Placeholder (Imagine an AdSense ad here!)</div>
     </div>
+    <footer>
+        <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
