--- a/bathroom.html
+++ b/bathroom.html
@@ -45,4 +45,135 @@
             color: black;
         }
         h1 {
-            font-family
+            font-family: 'Bungee', cursive;
+            font-size: 2.5em;
+            color: #2ecc71;
+            text-shadow: 2px 2px 4px black;
+        }
+        .hack-grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+        .hack-card {
+            background: rgba(255, 255, 255, 0.1);
+            background-size: cover;
+            background-position: center;
+            border: 3px solid #2ecc71;
+            border-radius: 10px;
+            width: 300px;
+            padding: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+        .hack-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: 0;
+        }
+        .hack-card:hover {
+            transform: translateY(-10px) rotate(2deg);
+        }
+        .hack-content {
+            position: relative;
+            z-index: 1;
+        }
+        .hack-card strong {
+            color: #2ecc71;
+            font-size: 1.1em;
+            display: block;
+        }
+        .hack-card p {
+            color: white;
+            margin: 5px 0 0;
+            font-size: 0.9em;
+        }
+        .ad-placeholder {
+            background: #333;
+            color: white;
+            padding: 10px;
+            margin: 20px auto;
+            width: 300px;
+            border-radius: 5px;
+        }
+        footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 10px;
+            color: white;
+            text-align: left;
+            font-size: 0.9em;
+            z-index: 1;
+        }
+        footer a {
+            color: #2ecc71;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: white;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="overlay"></div>
+    <div class="container">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="kitchen.html">Kitchen</a>
+            <a href="home.html">Home</a>
+            <a href="tech.html">Tech</a>
+            <a href="beauty.html">Beauty</a>
+            <a href="clothes.html">Clothes</a>
+            <a href="car.html">Car</a>
+            <a href="bathroom.html">Bathroom</a>
+        </nav>
+        <h1>Bathroom Hacks</h1>
+        <div class="hack-grid">
+            <div class="hack-card" style="background-image: url('eucalyptus.jpg');">
+                <div class="hack-content">
+                    <strong>Hang Eucalyptus in the Shower:</strong>
+                    <p>Steam releases oils = DIY spa vibes.</p>
+                </div>
+            </div>
+            <div class="hack-card" style="background-image: url('squeegee.jpg');">
+                <div class="hack-content">
+                    <strong>Use a Squeegee to Remove Hair from the Floor:</strong>
+                    <p>Works shockingly well on tile or linoleum.</p>
+                </div>
+            </div>
+            <div class="hack-card" style="background-image: url('vinegar.jpg');">
+                <div class="hack-content">
+                    <strong>Vinegar + Baking Soda Bomb for Drains:</strong>
+                    <p>Pour baking soda, then vinegar, then hot water to unclog smelly drains without chemicals.</p>
+                </div>
+            </div>
+            <div class="hack-card" style="background-image: url('tic-tac.jpg');">
+                <div class="hack-content">
+                    <strong>Tic Tac Container for Bobby Pins:</strong>
+                    <p>Keeps them together and easy to shake out.</p>
+                </div>
+            </div>
+            <div class="hack-card" style="background-image: url('soap.jpg');">
+                <div class="hack-content">
+                    <strong>Rub a Bar of Soap on Foggy Glasses:</strong>
+                    <p>Buff it off to create a fog-resistant layer before showering.</p>
+                </div>
+            </div>
+        </div>
+        <div class="ad-placeholder">Ad Placeholder (Imagine an AdSense ad here!)</div>
+    </div>
+    <footer>
+        <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
+    </footer>
+</body>
+</html>
