--- a/beauty.html
+++ b/beauty.html
@@ -8,8 +8,9 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background: url('bg-hacks.jpg') no-repeat center/cover;
-            height: 100vh;
+            min-height: 100vh;
             overflow-x: hidden;
+            position: relative;
         }
         .overlay {
             position: absolute;
@@ -37,7 +38,7 @@
         nav a {
             color: white;
             text-decoration: none;
-            margin: 015px;
+            margin: 0 15px;
             font-weight: bold;
         }
         nav a:hover {
@@ -95,6 +96,23 @@
             margin: 5px 0 0;
             font-size: 0.9em;
         }
+        footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 10px;
+            color: white;
+            text-align: left;
+            font-size: 0.9em;
+            z-index: 1;
+        }
+        footer a {
+            color: #2ecc71;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: white;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
@@ -140,10 +158,13 @@
             <div class="hack-card" style="background-image: url('vaseline.jpg');">
                 <div class="hack-content">
                     <strong>Vaseline for DIY Perfume Lock:</strong>
-                    <p>Dab some on pulse points before applying perfume to make Ascertainly make the scent last longer.</p>
+                    <p>Dab some on pulse points before applying perfume to make the scent last longer.</p>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
