--- a/clothes.html
+++ b/clothes.html
@@ -8,8 +8,9 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background: url('bg-hacks.jpg') no-repeat center/cover;
-            height: 100vh;
+            min-height: 100vh;
             overflow-x: hidden;
+            position: relative;
         }
         .overlay {
             position: absolute;
@@ -95,6 +96,23 @@
             margin: 5px 0 0;
             font-size: 0.9em;
         }
+        footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 10px;
+            color: white;
+            text-align: left;
+            font-size: 0.9em;
+            z-index: 1;
+        }
+        footer a {
+            color: #2ecc71;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: white;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
@@ -113,7 +131,7 @@
         </nav>
         <h1>Clothes Hacks</h1>
         <div class="hack-grid">
-            <div class="hack-card" style="background-image: url('ice.jpg');">
+            <div class="hack-card" style="background-image: url('ice-cubes.jpg');">
                 <div class="hack-content">
                     <strong>Ice Cubes in Dryer to De-Wrinkle:</strong>
                     <p>Toss 1–2 in with wrinkled clothes and run on high for 10 mins—wrinkles steam right out.</p>
@@ -145,5 +163,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>© 2025 Quick Life Hacks Hub | <a href="privacy.html">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
