--- a/home.html
+++ b/home.html
@@ -173,7 +173,7 @@
                     <p>Spray a little on crayon marks, wipe with a cloth—wall art gone.</p>
                 </div>
             </div>
-            <div class="hack-card" style="background-image: url('ice-cubes.jpg');">
+            <div class="hack-card" style="background-image: url('ice.jpg');">
                 <div class="hack-content">
                     <strong>Ice Cubes to Lift Carpet Dents:</strong>
                     <p>Place ice cubes where furniture dented the carpet, let them melt, then fluff with a fork.</p>
